# solana-ua-bootcamp-2025-03-19

./: Cargo.toml
practice-1/rust-exercises/: Cargo.toml
practice-1/rust-exercises/src/: main.rs
practice-2/task_2_10/: .env.example  .gitignore  Cargo.toml
practice-2/task_2_10/src/: main.rs  utils.rs
practice-2/task_2_11/: .env.example  Cargo.toml
practice-2/task_2_11/src/: main.rs  utils.rs
practice-2/task_2_8/: .env.example  Cargo.toml
practice-2/task_2_8/src/: explorer_link.rs  lib.rs
practice-2/task_2_9/: Cargo.toml
practice-2/task_2_9/src/: main.rs
practice-3/task_3_3/: Anchor.toml
practice-3/task_3_3/programs/escrow/src/: errors.rs  lib.rs
practice-3/task_3_3/programs/escrow/src/instructions/: cancel_offer.rs  make_offer.rs  mod.rs  take_offer.rs
practice-3/task_3_3/programs/escrow/src/state/: offer.rs
practice-3/task_3_3/tests/: escrow.test.ts
practice-4/task_4_1/: Anchor.toml
practice-4/task_4_1/programs/favorites/: Cargo.toml
practice-4/task_4_1/programs/favorites/src/: constants.rs  lib.rs
practice-4/task_4_1/programs/favorites/src/instructions/: mod.rs  set_favorites.rs  update_favorites.rs
practice-4/task_4_1/programs/favorites/src/state/: favorites.rs
practice-4/task_4_1/tests/: favorites.test.ts  system-program-errors.ts
practice-4/task_4_2/: Anchor.toml
practice-4/task_4_2/programs/favorites/src/: constants.rs  lib.rs
practice-4/task_4_2/programs/favorites/src/instructions/: errors.rs  mod.rs  set_authority.rs  set_favorites.rs  set_favorites_v1.rs  update_favorites.rs  update_favorites_multi_versions.rs
practice-4/task_4_2/programs/favorites/src/state/: favorites.rs
practice-4/task_4_2/tests/: favorites.test.ts
practice-4/task_4_3/: Anchor.toml
practice-4/task_4_3/programs/escrow/: Cargo.toml
practice-4/task_4_3/programs/escrow/src/: lib.rs
practice-4/task_4_3/programs/escrow/src/instructions/: cancel_offer.rs  make_offer.rs  take_offer.rs
practice-4/task_4_3/tests/: escrow.test.ts
