[package]
name = "task_2_10"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
spl-token-2022 = "7.0.0"
spl-associated-token-account = "6.0.0"
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.97"
base64 = "0.22.1"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }