[package]
name = "task_2_11"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
spl-token-2022 = "7.0.0"
spl-associated-token-account = "6.0.0"
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
anyhow = "1.0.97"
bincode = "1.3.3"
log = "0.4"
env_logger = "0.11"