[package]
name = "task_2_9"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program = "2.2.1"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"]  }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "macros"] }